hphp/hack/test/typecheck/pipe_assign.php.exp
File "pipe_assign.php", line 5, characters 3-4:
You cannot use this syntax on the left-hand side of an assignment. (Parsing[1002])
File "pipe_assign.php", line 6, characters 3-4:
You cannot use this syntax on the left-hand side of an assignment. (Parsing[1002])
File "pipe_assign.php", line 5, characters 3-4:
Variable `$$` is undefined, or not always defined. (Naming[2050])
File "pipe_assign.php", line 6, characters 3-4:
Variable `$$` is undefined, or not always defined. (Naming[2050])
